Fixing Sonarqube recommendations.